<resources>
    <string name="app_name">MAudioFasttrackMixer</string>
    <string name="label_scenes_list">Scenes</string>
    <string name="button_save">Save</string>
    <string name="button_load">Load</string>
    <string name="button_new">New</string>
    <string name="button_delete">Delete</string>
    <string name="button_saveAs">Save as</string>
    <string name="label_scenes">Scenes</string>
    <string name="label_settings">Settings</string>
    <string name="label_presets">Presets</string>
    <string name="label_current_preset">Current preset:</string>
    <string name="label_mixer">Mixer</string>
    <string name="spinner_effectType">Effect type</string>
    <string name="spinner_sampleRate">Sample rate</string>
    <string name="seekBar_duration">Duration</string>
    <string name="seekBar_feedback">Feedback</string>
    <string name="seekBar_volume">Volume</string>
    <string name="button_mute">M</string>
    <string name="button_solo">S</string>
    <string name="label_output">Output</string>
    <string name="button_fine">Fine</string>
    <string name="button_mute_fx">Mute FX</string>
    <string name="default_output">Output:\n1–2</string>
    <string name="label_scene_name">scene name</string>
    <string name="label_as">as</string>
    <string name="title_save_scene">Save</string>
    <string name="title_preset_name">Preset name</string>
    <string name="scene_name_value">Scene 1</string>
    <string name="preset_name_value">Preset 1</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="label_overwrite_preset">\"%1$s\" already exists. Overwrite?</string>
    <string name="button_add_preset">Add preset</string>
    <string name="button_ok">Ok</string>
    <string name="label_not_created">Preset not created. Preset \"%1$s\" already exists.</string>
    <string name="preset_name_in_use">preset name already in use</string>
    <string name="device_online">DEVICE ONLINE</string>
    <string name="device_offline">DEVICE OFFLINE</string>
    <string name="load_preset">Load \"%1$s\"?</string>
    <string name="delete_preset">Delete \"%1$s\"?</string>
    <string name="button_overwrite_preset">Overwrite \"%1$s\"?</string>
    <string name="message_preset_already_loaded">Preset \"%1$s\" already loaded</string>
    <string name="message_cant_delete_preset">Can\'t delete \"%1$s\". Preset currently loaded to device.</string>
    <string name="save_as_new_preset">Save as new preset</string>
    <string name="button_rename">Rename</string>
    <string name="button_save_as_new">Save as new</string>
    <string name="title_rename_or_save_preset">Rename \"%1$s\" to \"%2$s\" or save it as new preset?</string>
</resources>
