<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/button_unselected"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddPreset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSavePresetLabel"
            android:layout_gravity="right"
            android:textSize="@dimen/text_16sp"
            android:textColor="?android:attr/editTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_save_scene" />

        <TextView
            android:id="@+id/textViewSaveSceneName"
            android:paddingLeft="@dimen/dimen_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16sp"
            android:textColor="?android:attr/editTextColor"
            tools:text="@string/scene_name_value" />

        <TextView
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_as" />

        <Spinner
            android:id="@+id/spinnerScenes"
            android:textColor="?android:attr/editTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_scene_name" />

        <EditText
            android:id="@+id/editTextSceneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_2dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:textSize="@dimen/text_16sp"
            tools:text="@string/scene_name_value"/>
    </GridLayout>

    <Button
        android:id="@+id/buttonAddPreset"
        android:textAllCaps="false"
        android:background="@drawable/button_unselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGrid" />
</androidx.constraintlayout.widget.ConstraintLayout>