<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/button_unselected"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddPreset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewNotCreatedLabel"
            android:layout_gravity="right"
            android:textSize="@dimen/text_16sp"
            android:textColor="?android:attr/editTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_preset_name" />

        <EditText
            android:id="@+id/editTextPresetName"
            android:paddingLeft="@dimen/dimen_8dp"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16sp"
            android:textColor="?android:attr/editTextColor"
            tools:text="@string/preset_name_value" />
    </GridLayout>
    <TextView
        android:id="@+id/textViewPresetExists"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preset_name_in_use"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_14sp"/>
    <Button
        android:id="@+id/buttonAddPreset"
        android:enabled="false"
        android:textAllCaps="false"
        android:background="@drawable/button_unselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/button_add_preset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</LinearLayout>