<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/button_unselected"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewOverwriteSceneLabel"
        android:textSize="@dimen/text_16sp"
        android:gravity="center_horizontal"
        android:textColor="?android:attr/editTextColor"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_preset_name" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonOverwrite"
            android:background="@drawable/button_unselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/button_overwrite"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/buttonCancel"
            android:background="@drawable/button_unselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainGrid" />
    </LinearLayout>
</LinearLayout>