<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/button_unselected"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_gravity="right"
            android:textSize="@dimen/text_16sp"
            android:textColor="?android:attr/editTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rename_or_save_preset" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGrid">

        <Button
            android:id="@+id/buttonRename"
            android:textAllCaps="false"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:background="@drawable/button_unselected"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_rename"/>

        <Button
            android:id="@+id/buttonSaveAsNew"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:textAllCaps="false"
            android:background="@drawable/button_unselected"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save_as_new"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>