<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.mpiotrowski.maudiofasttrackmixer.ui.MainViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/layoutMain"
        tools:ignore="RtlHardcoded"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/panel_background"
            android:padding="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCurrentPresetsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_current_preset"/>

            <TextView
                android:id="@+id/textViewPresetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                tools:text="preset name"/>

            <Button
                android:id="@+id/buttonSavePreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/button_unselected"
                android:text="@string/button_save"/>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/panel_background"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewPresetsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:text="@string/label_presets"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPresets"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clickable="true"
                android:focusable="true"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@drawable/panel_background"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/textViewSceneName"
                android:text="@string/label_scenes_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginLeft="@dimen/dimen_8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewScenes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_4dp"
                android:orientation="horizontal"/>
        </LinearLayout>
    </LinearLayout>
</layout>
